--- a/EDA_911.ipynb
+++ b/EDA_911.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EDA-911",
       "provenance": [],
-      "authorship_tag": "ABX9TyNeoiKWaHIaf0vFQ/YuRZPH",
+      "authorship_tag": "ABX9TyOmvcf9bbS4nmf2GRcpCC0+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "%matplotlib inline \n",
         "import seaborn as sns\n"
       ],
-      "execution_count": 70,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -49,13 +49,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xLrwig7xmT1Z",
-        "outputId": "9648fab5-701b-4834-8460-a05eed79a0a7"
+        "outputId": "de1ac927-efb3-48bb-f5e7-52ef7265e839"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount(\"/content/gdrive\")"
       ],
-      "execution_count": 71,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,14 +74,14 @@
           "height": 1000
         },
         "id": "4Gdx-KcMmntW",
-        "outputId": "52d00636-4033-4a4d-a7f1-564c4ad0d15d"
+        "outputId": "8e808c57-016f-4870-8738-c0a865e04b7f"
       },
       "source": [
         "#Reading the data from the csv file\n",
         "df=pd.read_csv(\"/content/gdrive/My Drive/Dataset/911.csv\")\n",
         "df"
       ],
-      "execution_count": 72,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +274,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 10
         }
       ]
     },
@@ -303,13 +303,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nufM92TumxKE",
-        "outputId": "a9d1b58c-85a3-4e42-bf7c-0331206d8070"
+        "outputId": "65c3df13-ba1f-44ce-b376-1f824760e77b"
       },
       "source": [
         "df.shape\n",
         "#No of rows, No of columns are displayed"
       ],
-      "execution_count": 73,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 11
         }
       ]
     },
@@ -350,12 +350,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "liAfry96m_md",
-        "outputId": "1cefb1cc-162d-41db-81b7-7cab59640181"
+        "outputId": "59f11136-383a-4218-c33f-a88a8d687b9d"
       },
       "source": [
         "len(df.columns)"
       ],
-      "execution_count": 74,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +367,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 74
+          "execution_count": 12
         }
       ]
     },
@@ -378,12 +378,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_sNjResxnY-6",
-        "outputId": "14ec5c3d-c9b3-4798-ea3a-657b2a4d329e"
+        "outputId": "412d52e9-bcdf-4487-b043-873b9422360d"
       },
       "source": [
         "df.columns"
       ],
-      "execution_count": 75,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +395,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 17
         }
       ]
     },
@@ -407,12 +407,12 @@
           "height": 306
         },
         "id": "fBbxqfuynaF_",
-        "outputId": "91955a8e-b9b2-4ef6-e2b3-3ac1bcdfcfea"
+        "outputId": "bdff1f7e-48d3-4161-ee79-6386ac367eae"
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": 76,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 18
         }
       ]
     },
@@ -539,13 +539,13 @@
           "height": 214
         },
         "id": "jUg4fJwBn3a8",
-        "outputId": "82c8d151-7bde-4367-d4dc-92aea898e0ff"
+        "outputId": "5ef28802-e682-433d-edc7-9abeb4f9eaad"
       },
       "source": [
         "categorical_data=df.dtypes[df.dtypes==object].index   \n",
         "df[categorical_data].describe() "
       ],
-      "execution_count": 77,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 15
         }
       ]
     },
@@ -646,12 +646,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KWZKFSqIoJYw",
-        "outputId": "c7c05e48-7a26-4e79-979f-3df414cce065"
+        "outputId": "5f03a068-b332-4247-aff2-1f8e839481cd"
       },
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 78,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,7 +672,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 19
         }
       ]
     },
@@ -703,7 +703,7 @@
         "columns_fill=[\"zip\",\"twp\"]\n",
         "df.loc[:,columns_fill]=df.loc[:,columns_fill].ffill()"
       ],
-      "execution_count": 79,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -713,12 +713,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9XU0XqX2pdXb",
-        "outputId": "0309f5f2-7340-468f-9228-09c64b783871"
+        "outputId": "d9457e3b-7a97-44ad-e2ba-c3c8af8f5ef7"
       },
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 80,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,7 +739,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 21
         }
       ]
     },
@@ -759,12 +759,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-iSYoEP7py3U",
-        "outputId": "e8537166-1156-4d6f-c2b9-5b89904cbf86"
+        "outputId": "f6e24bbb-4c1c-4018-fdac-fdcdb589680a"
       },
       "source": [
         "df.e.unique"
       ],
-      "execution_count": 81,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +787,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 22
         }
       ]
     },
@@ -808,7 +808,7 @@
       "source": [
         "df.drop(\"e\",axis=1,inplace=True)"
       ],
-      "execution_count": 82,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -818,13 +818,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M-mmLZrWp40d",
-        "outputId": "a6c1c4d0-a3b5-4d58-8c56-7ec754838cd3"
+        "outputId": "115c4ada-2733-4ecc-e5db-9aa6c92c1de8"
       },
       "source": [
         "df.columns\n",
         "#confirms column \"e\" has been removed"
       ],
-      "execution_count": 83,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -836,7 +836,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 24
         }
       ]
     },
@@ -866,7 +866,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9iRw6KxNp9Hp",
-        "outputId": "234c2ed8-e2bd-4bc8-fa4f-8757a796b81b"
+        "outputId": "a7cff93f-6fe0-426a-adaa-891f82d22592"
       },
       "source": [
         "df['timeStamp'] = pd.to_datetime(df['timeStamp'])\n",
@@ -888,7 +888,7 @@
         "\n",
         "df['Day'] = df['Day'].map(datemap)"
       ],
-      "execution_count": 84,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,7 +918,7 @@
       "source": [
         "#df.drop(\"Day of Week\",axis=1,inplace=True)"
       ],
-      "execution_count": 85,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -929,12 +929,12 @@
           "height": 192
         },
         "id": "WZrliQK9tYOZ",
-        "outputId": "566b0af7-05da-4889-fcd4-8f5efa416f74"
+        "outputId": "9b71464c-f8c0-4f46-afb1-fc7eda527880"
       },
       "source": [
         "df.head(1)"
       ],
-      "execution_count": 86,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1004,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 86
+          "execution_count": 27
         }
       ]
     },
@@ -1029,7 +1029,7 @@
         "1\n",
         "df.drop(\"title\",axis=1,inplace=True)\n"
       ],
-      "execution_count": 87,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1039,12 +1039,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tYysSJh9wVGd",
-        "outputId": "f8089386-10b8-4aaf-c36f-4056f1e51d43"
+        "outputId": "e8721651-d088-4786-b52c-728baceff5d0"
       },
       "source": [
         "df.columns  "
       ],
-      "execution_count": 88,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1058,19 +1058,296 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 88
+          "execution_count": 29
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yJKtFyNDwpJB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yJKtFyNDwpJB",
+        "outputId": "9367ec80-5d20-421f-b24f-57828d8c8d29"
+      },
+      "source": [
+        "df[\"Station_code\"]=df[\"desc\"].str.split(\"Station\",expand=True)[1]\n",
+        "df[\"Station_code\"]=df[\"Station_code\"].str.split(\";\",expand=True)[0]\n",
+        "df[\"Station_code\"]=df[\"Station_code\"].str.replace(\":\",\" \")\n",
+        "df[\"Station_code\"].head()"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       332\n",
+              "1       345\n",
+              "2     STA27\n",
+              "3      308A\n",
+              "4       329\n",
+              "Name: Station_code, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F94DdIpG-C5R"
+      },
+      "source": [
+        "df.drop(\"desc\",axis=1,inplace=True)"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fJiRXnKK-uQ_",
+        "outputId": "fe071f5a-2bc3-4861-b67b-86549488952c"
+      },
+      "source": [
+        "df.columns\n",
+        "#column \"Desc\" removed"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['lat', 'lng', 'zip', 'timeStamp', 'twp', 'addr', 'Month', 'Day', 'Hour',\n",
+              "       'Year', 'Date', 'Category', 'Reason', 'Station_code'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "02XPKgyV-zAr"
+      },
+      "source": [
+        "df.drop(\"timeStamp\",axis=1,inplace=True)"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "odmx2Yqp-_k6"
+      },
+      "source": [
+        "### **Exploratory Data Analysis (EDA)**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z_X5y6-t_KsF"
+      },
+      "source": [
+        "In this section, we identify the reason for\n",
+        "\n",
+        "\n",
+        "*   Reason for most emergency calls\n",
+        "*   Township with maximum number of emergency calls\n",
+        "*   Time of the year when most 911 calls are made\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gnc11H-u_FUs",
+        "outputId": "8c961dbe-d42f-49dd-a88b-6fec2d0d1d49"
+      },
+      "source": [
+        "df[\"Reason\"].value_counts()"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              " VEHICLE ACCIDENT -           148372\n",
+              " DISABLED VEHICLE -            47909\n",
+              " FIRE ALARM                    38452\n",
+              " VEHICLE ACCIDENT              36377\n",
+              " FALL VICTIM                   34683\n",
+              "                               ...  \n",
+              " HAZARDOUS ROAD CONDITIONS         2\n",
+              " HIT + RUN                         1\n",
+              " FOOT PATROL                       1\n",
+              " PRISONER IN CUSTODY               1\n",
+              " ANIMAL COMPLAINT                  1\n",
+              "Name: Reason, Length: 95, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pmRqHjQi-9JN",
+        "outputId": "671d8f0c-f566-4dbd-fc61-3abe2df958de"
+      },
+      "source": [
+        "df.twp.value_counts()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LOWER MERION       55516\n",
+              "ABINGTON           39961\n",
+              "NORRISTOWN         37646\n",
+              "UPPER MERION       36025\n",
+              "CHELTENHAM         30582\n",
+              "                   ...  \n",
+              "EAST GREENVILLE     1316\n",
+              "BRYN ATHYN          1254\n",
+              "GREEN LANE           385\n",
+              "PHILA COUNTY         267\n",
+              "LEHIGH COUNTY        190\n",
+              "Name: twp, Length: 68, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SJmZRQfXAQ6l"
+      },
+      "source": [
+        "Top 3 months with highest 911 calls"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q225Aw0x_5b4",
+        "outputId": "d4a70616-6b95-4c57-a2db-a93955762064"
+      },
+      "source": [
+        "df[\"Month\"].value_counts().head(3)\n"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1    62336\n",
+              "6    60034\n",
+              "3    60027\n",
+              "Name: Month, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iZNG-W-SAX7t"
+      },
+      "source": [
+        "Top 5 stations with maximum number of calls made"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ddKMd_rZAH4M",
+        "outputId": "443c1bfc-dc73-4de6-be5d-cb36efe8caa8"
+      },
+      "source": [
+        "top5_station=df[\"Station_code\"].value_counts().head()\n",
+        "top5_station"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              " 308A    25346\n",
+              " 329     21895\n",
+              " 313     20325\n",
+              " 381     15949\n",
+              " 345     14504\n",
+              "Name: Station_code, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jwhgVr48AcGw"
       },
       "source": [
         ""
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     }
   ]
